# qsa

./: .gitignore  CLAUDE.md  pyproject.toml
config/: postgres.secrets.yaml.example  postgres.yaml.example  qsa.yaml
docs/: README_qsa.md  canonical_qualitative_mart_design_v1_20260504.md  data_confidence_rubric_v1_20260504.md  qsa_cli_reference.md  qsa_rules.md  ticker-reuse-detection-2026-06-02.md  udc_qualitative_harvest_preflight_20260504.md
reports/: data_confidence_rubric_v1_20260504.md  finnhub_retire_recommendation_20260503.md  mdc_masd_review_20260503.md  mdc_no_data_check_20260503.txt  mdc_no_data_check_post_cleanup_20260503.txt  polygon_short_interest_investigation_20260503.md  post_mdc_cleanup_baseline_20260503.md  qsa_audit_20260503.csv  qsa_audit_20260503.md  qsa_audit_post_cleanup_20260503.csv  qsa_audit_post_cleanup_20260503.md  qsa_audit_post_filer_type_20260503.csv  qsa_audit_post_filer_type_20260503.md  qsa_audit_post_r004_fix_20260503.csv  qsa_audit_post_r004_fix_20260503.md  qsa_audit_post_short_interest_recovery_20260504.csv  qsa_audit_post_short_interest_recovery_20260504.md  qsa_audit_post_tuning_20260503.csv  qsa_audit_post_tuning_20260503.md  qsa_audit_post_udc_sec_penalties_20260503.csv  qsa_audit_post_udc_sec_penalties_20260503.md  qualitative_cleanup_baseline_20260503.md  qualitative_cleanup_completion_20260503.md  reprocess_recommendation_20260503.md  udc_qualitative_harvest_preflight_20260504.md
scripts/: cron_run.sh
src/qsa/: __init__.py  __main__.py  audit.py  cli.py  (+6 more)
tests/: test_ccoption.py  test_ohlc_integrity.py  test_smoke.py
(+12 files in other folders)
